[package]
name = "dt-hc-kygn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4.3"
thiserror = "^1.0"
anyhow      = { version = "1.0" }
array-bytes = { version = "6.2" }
# bip39       = { version = "1.0", features = ["rand"] }
rand        = { version = "0.8", features = ["std_rng"] }
secp256k1   = { version = "^0.28", features = ["global-context", "rand", "rand-std", "hashes"] }
tiny-keccak = { version = "2.0", features = ["keccak"] }